macOS specific styles (still need to fix navbar on halfscreen!), no text wrap on slide nav

--- a/static/styles/extraExtraSmall.css
+++ b/static/styles/extraExtraSmall.css
@@ -142,8 +142,6 @@
         width: 100%;
         max-width: 100%;
         max-height: 24vw;
-        word-break: break-word;
-        overflow-wrap: break-word;
     }
 
     #overview .button-container {
